samples/_failures_safe/1761510470_02b542_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99682963.c: In function ‘main’:
./samples/SAFE/__tmp_99682963.c:158:5: error: expected declaration or statement at end of input
  158 |     printf("Enter expression to tokenize: ");
      |     ^~~~~~
